--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <header class="container text-white">
         <div id="hello" class="">
           <code class="text-white">
-            <h1 class="mb-3 text-center">Hello, This is Emre. 👋</h1>
+            <h1 class="mb-3 text-center">Hello, This is Emre 👋</h1>
             <h3 class="mb-5 text-center">Front-end Developer</h3>
           </code>
   
