--- a/work.html
+++ b/work.html
@@ -52,21 +52,28 @@
 
     <!------------------------------------ Section 1  --------------------------------------->
     <div class="container">
-      <h1 class="text-center my-4">Works.</h1>
+      <h1 class="text-center my-5">Works.</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp"
+              src="https://cdn.rawgit.com/Deftwun/e3756a8b518cbb354425/raw/6584db8babd6cbc4ecb35ed36f0d184a506b979e/free-code-camp-logo.svg"
               class="card-img-top"
               alt="Hollywood Sign on The Hill"
+              
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <a class="card-link" href="https://fcc-portfolio-page.vercel.app/">
+                <h5 class="card-title">FreeCodeCamp Projects
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right mb-1" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+                    <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+                  </svg>
+                </h5>
+              </a>
+           
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                FreeCodeCamp projects showcases my skills in web development through a range of interactive coding challenges and projects. You can navigate the other projects through the link.
               </p>
             </div>
           </div>
