--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
               &copy; 2023 Designed by Emre Turan,
               <a
                 class="open-source"
-                href="https://github.com/etdesign"
+                href="https://github.com/etdesign/Portfolio-Site"
                 target="_blank"
               >
                 "Open Source"
