issue fix for smaller screen sizes.

--- a/contact.html
+++ b/contact.html
@@ -96,20 +96,22 @@
       <div id="footer" class="container text-white">
         <div class="row py-5">
           <!---------------------- Contact-------------------------->
-          <div id="contact" class="col-md-4 d-flex flex-column align-content-center">
-            <div class="logo">
+          <div
+            id="contact"
+            class="col-md-4 d-flex flex-column align-content-center"
+          >
+            <div class="logo text-center">
               <a class="navbar-brand">
                 <img
                   src="../img/emre turan/SF Pro Bold Dark.svg"
                   alt="logo"
                   class="logo"
-                  style="margin-left: -16px
-                  "
-                /> 
+                  style="margin-left: -16px"
+                />
               </a>
             </div>
 
-            <div class="col">
+            <div class="col d-none d-md-block p-1">
               <p class="me-1">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -126,7 +128,7 @@
               </p>
               <p>itsemreturan@gmail.com</p>
             </div>
-            <div class="col">
+            <div class="col d-none d-md-block p-1">
               <p class="me-1">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -148,9 +150,8 @@
           <!---------------------- Social Media  -------------------------->
           <div
             id="social"
-            class="col-md-4  d-flex justify-content-center align-items-center"
+            class="col-md-4 d-flex justify-content-center align-items-center"
           >
-          
             <a
               href="https://github.com/etdesign"
               style="color: inherit"
@@ -245,8 +246,10 @@
             </a>
           </div>
           <!---------------------- Nav Links -------------------------->
-          <div id="footer-links" class="col-md-4 ">
-            <ul class="nav flex-column align-content-center"">
+          <div id="footer-links" class="col-md-4">
+            <ul
+              class="nav flex-md-column align-content-center justify-content-center"
+            >
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html"
                   >Home
@@ -271,7 +274,7 @@
               &copy; 2023 Designed by Emre Turan,
               <a
                 class="open-source"
-                href="https://github.com/etdesign"
+                href="https://github.com/etdesign/Portfolio-Site"
                 target="_blank"
               >
                 "Open Source"
