--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     <!------------------------------------ Section 1  --------------------------------------->
     <div class="container-fluid">
       <section class="container my-5">
-        <h1 class="text-center py-5">About.</h1>
+        <h1 class="text-center">About.</h1>
         <div class="row mt-5" style="height: 250px">
           <div class="col-8 d-flex justify-content-center align-items-start">
             <p>
